static/css/style.css
/* ... */
  .comment-list li {
    padding: 0;
    margin: 0 0 30px 0;
    float: left;
    width: 100%;
    clear: both;
    list-style: none; }
    .comment-list li .vcard {
      width: 80px;
      float: left; }
      .comment-list li .vcard img {
        width: 50px;
        border-radius: 50%; }
    .comment-list li .comment-body {
      float: right;
      width: calc(100% - 80px); }
      .comment-list li .comment-body h3 {
        font-size: 20px; }
      .comment-list li .comment-body .meta {
        text-transform: uppercase;
        font-size: 13px;
        letter-spacing: .1em;
        color: #ccc; }
      .comment-list li .comment-body .reply {
        padding: 5px 10px;
        background: #e6e6e6;
        color: #000;
        text-transform: uppercase;
        font-size: 14px; }
        .comment-list li .comment-body .reply:hover {
          color: #000;
          background: #e3e3e3; }

.centered-div {
  display: flex;
  justify-content: center;
  align-items: center;
}

.dashboard-container-left {
  border-top: 3px solid black;
  border-bottom: 3px solid black;
  border-left: 3px solid black;
  border-right: 1.5px solid black;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
}

.dashboard-container-right {
  border-top: 3px solid black;
  border-bottom: 3px solid black;
  border-right: 3px solid black;
  border-left: 1.5px solid black;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
}

.dashboard-content {
  height: 525px;
}

.custom-tooltip {
  --bs-tooltip-bg: var(--bs-primary);
}

li {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

#dashboard-container-right {
  width: 80%;
  height: 100%;
  overflow-x: hidden;
  position: relative;
}

#dashboard-container-right-column {
  width: 100%;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
}

#progress-bar-div {
  position: relative;
  top: -10px;
  padding-left: 25px;
  padding-right: 25px;
}

.error {
  width: 100%;
  margin-top: 0.25rem;
  font-size: 80%;
  color: red; 
}

.col-centered{
  float: none;
  margin: 0 auto;
}

.green {
  background-color: green;
}

.copyright {
  display:block;
}

.dropdown-menu {
  max-height: 280px;
  overflow-y: auto;
}

.move-down {
  margin-top: 45px;
}

.flip {
  transform: rotate(180deg) translate(0, 2px);
  transition: transform 0.3s;
}

@media (max-height: 850px) {
  #home-section {
    zoom: 0.90;
    -moz-transform: scale(0.9);
    -moz-transform-origin: 0 0;
  }
}

@media (max-width: 995px) {
  #index-container {
    padding-top: 50px;
    margin-bottom: 50px;
  }
  #index-continue-button {
    margin: auto;
  }
}

@media only screen and (max-width: 1000px) {
  .site-wrap {
    display: none;
  }

  #no-mobile-users-div {
    display: inline!important;
  }
}

